--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,12 @@ xcuserdata/
 *.xccheckout
 *.xcscmblueprint
 
-# CocoaPods
-Pods/
-Podfile.lock
+# Swift Package Manager
+#
+# Add this line if you want to avoid checking in source code from Swift Package Manager dependencies.
+ Packages/
+ Package.pins
+ Package.resolved
 
 # Xcode Playgrounds
 timeline.xctimeline
